# openapi.yaml
@@ -222,7 +222,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/CommentFullResponse'
+                $ref: '#/components/schemas/CommentResponse'
     get:
       tags:
         - ProjectComment
@@ -245,7 +245,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/CommentFullResponse'
+                  $ref: '#/components/schemas/CommentResponse'
 
   /api/v1/main_service/comments/{id}:
     delete:
@@ -1678,7 +1678,7 @@ components:
           description: Роль пользователя в проекте
           example: "DevOps"
 
-    CommentFullResponse:
+    CommentResponse:
       type: object
       properties:
         id:
@@ -1686,16 +1686,15 @@ components:
           format: int64
           description: Идентификатор комментария
           example: 1001
-        owner:
+        author:
           $ref: '#/components/schemas/UserFullResponse'
         text:
           type: string
           description: Текст комментария
           example: "User12345"
-        createdDate:
+        createdAt:
           type: string
-          format: date-time
-          description: Дата и время создания комментария (UTC)
+          description: Дата и время создания комментария
           example: "2026-01-24T14:32:10"
 
     ProjectMemberRequest:
@@ -1760,7 +1759,7 @@ components:
           type: array
           description: Комментарии к проекту
           items:
-            $ref: '#/components/schemas/CommentFullResponse'
+            $ref: '#/components/schemas/CommentResponse'
 
     ProjectSummaryResponse:
       type: object
